--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Carver Edison Budget Planner</title>
+    <title>Budget Planner App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
